tests/anp_with_np_pass_test/policies.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: pass-example-with-np
spec:
  priority: 10
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ns1
      podSelector:
        matchLabels:
          app: a-app
  ingress:
  - name: "allow-tcp-80-from-ns2-pod1" 
    action: "Allow"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: ns2
        podSelector:
          matchLabels:
            app: a-app
    ports:
    - portNumber:
        port: 80
        protocol: TCP
  - name: "pass-tcp81-udp80-81-conns-from-ns2-pod1"
    action: "Pass"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: ns2
        podSelector:
          matchLabels:
            app: a-app
    ports:
    - portNumber:
        protocol: UDP
        port: 80
    - portNumber:
        protocol: UDP
        port: 81
    - portNumber:
        protocol: TCP
        port: 81
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-ns2-pod1
  namespace: ns1
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ns2
      podSelector:
        matchLabels:
          app: a-app
    ports:
    - port: 80
      protocol: UDP  
---
